imports/ui/markdeep/editor/navigation/navigation.scss
#markdeepNavigation {
  .btn-group {
    margin-left: 15px;
  }

  .card-button {
    text-align: center;
    vertical-align: top;
    margin-right: 5px;
    font-size: 16px !important;
    padding: 6px !important;
  }

  .btn-group .card-button:last-child {
    margin-right: 0;
  }

  .markdeep-mobile-preview {
    font-size: 20px !important;
    padding: 4px 10px !important;
  }

  .markdeep-rotate-mobile-preview {
    padding: 6px 10px !important;
  }

  .markdeep-help, .markdeep-translate {
    font-size: 16px;
    height: 30px !important;
  }

  .markdeep-translate {
    font-size: 14px !important;
  }

  .learningTime-group {
    label, input {
      color: white;
    }
    input {
      width: 40px;
      text-align: right;
      padding-right: 5px;
    }
    .type-label {
      float: left;
      margin-top: 7px;
    }
    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }

    /* Firefox */
    input[type=number] {
      -moz-appearance: textfield;
    }
  }
}

